TPE-COMPILADORES-main/src/main/java/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : ID $$1 bloq_general

   3  sentencia : sentencia_d
   4            | sentencia_e_gen
   5            | when

   6  sentencia_d : d_var
   7              | d_fun
   8              | const

   9  sentencia_e : asignacion
  10              | out
  11              | invocacion_fun
  12              | DEFER asignacion
  13              | DEFER out
  14              | DEFER invocacion_fun

  15  sentencia_e_gen : sentencia_e
  16                  | if
  17                  | for
  18                  | DEFER if
  19                  | DEFER for
  20                  | return

  21  sentencia_e_for : sentencia_e
  22                  | if_for
  23                  | for
  24                  | BREAK DOS_PUNTOS ID
  25                  | BREAK ID
  26                  | BREAK
  27                  | CONTINUE

  28  sentencia_fun : sentencia_d
  29                | sentencia_e_fun
  30                | when_fun

  31  sentencia_e_fun : sentencia_e
  32                  | if_fun
  33                  | for_fun
  34                  | return
  35                  | DEFER if_fun
  36                  | DEFER for_fun

  37  sentencia_e_for_fun : for_fun
  38                      | if_for_fun
  39                      | return
  40                      | BREAK DOS_PUNTOS ID
  41                      | BREAK
  42                      | CONTINUE

  43  bloq_sentencias : sentencia PUNTO_COMA
  44                  | sentencia error
  45                  | bloq_sentencias sentencia PUNTO_COMA
  46                  | bloq_sentencias sentencia error

  47  bloq_sentencias_e : sentencia_e_gen PUNTO_COMA
  48                    | sentencia_e_gen error
  49                    | bloq_sentencias_e sentencia_e_gen PUNTO_COMA
  50                    | bloq_sentencias_e sentencia_e_gen error
  51                    | error

  52  bloq_sentencias_e_for : sentencia_e_for PUNTO_COMA
  53                        | sentencia_e_for error
  54                        | bloq_sentencias_e_for sentencia_e_for PUNTO_COMA
  55                        | bloq_sentencias_e_for sentencia_e_for error
  56                        | error

  57  bloq_sentencias_fun : sentencia_fun PUNTO_COMA
  58                      | sentencia_fun error
  59                      | bloq_sentencias_fun sentencia_fun PUNTO_COMA
  60                      | bloq_sentencias_fun sentencia_fun error
  61                      | error

  62  bloq_sentencias_e_fun : sentencia_e_fun PUNTO_COMA
  63                        | sentencia_e_fun error
  64                        | bloq_sentencias_e_fun sentencia_e_fun PUNTO_COMA
  65                        | sentencia_e_fun sentencia_e_fun
  66                        | error

  67  bloq_sentencias_e_for_fun : sentencia_e_for_fun PUNTO_COMA
  68                            | sentencia_e_for_fun error
  69                            | bloq_sentencias_e_for_fun sentencia_e_for_fun PUNTO_COMA
  70                            | bloq_sentencias_e_for_fun sentencia_e_for_fun error
  71                            | error error

  72  bloq_general : LLAVE_AB bloq_sentencias LLAVE_CE
  73               | error bloq_sentencias LLAVE_CE
  74               | LLAVE_AB bloq_sentencias error
  75               | bloq_sentencias
  76               | LLAVE_AB LLAVE_CE

  77  bloq_ejecutable : LLAVE_AB bloq_sentencias_e LLAVE_CE
  78                  | error bloq_sentencias_e LLAVE_CE
  79                  | LLAVE_AB bloq_sentencias_e error
  80                  | LLAVE_AB LLAVE_CE

  81  bloq_ejecutable_for : LLAVE_AB bloq_sentencias_e_for LLAVE_CE
  82                      | error bloq_sentencias_e_for LLAVE_CE
  83                      | LLAVE_AB bloq_sentencias_e_for error
  84                      | error bloq_sentencias_e_for error
  85                      | LLAVE_AB LLAVE_CE

  86  bloq_general_fun : LLAVE_AB bloq_sentencias_fun LLAVE_CE
  87                   | error bloq_sentencias_fun LLAVE_CE
  88                   | LLAVE_AB bloq_sentencias_fun error
  89                   | error bloq_sentencias_fun error
  90                   | LLAVE_AB LLAVE_CE

  91  bloq_ejecutable_fun : LLAVE_AB bloq_sentencias_e_fun LLAVE_CE
  92                      | error bloq_sentencias_e_fun LLAVE_CE
  93                      | LLAVE_AB bloq_sentencias_e_fun error
  94                      | error bloq_sentencias_e_fun error
  95                      | LLAVE_AB LLAVE_CE

  96  bloq_ejecutable_for_fun : LLAVE_AB bloq_sentencias_e_for_fun LLAVE_CE
  97                          | error bloq_sentencias_e_for_fun LLAVE_CE
  98                          | LLAVE_AB bloq_sentencias_e_for_fun error
  99                          | error bloq_sentencias_e_for_fun error
 100                          | LLAVE_AB LLAVE_CE

 101  l_variables : ID
 102              | error
 103              | l_variables COMA ID

 104  d_var : tipo l_variables
 105        | ID l_variables

 106  parametro_form : tipo ID

 107  l_parametros_form : parametro_form
 108                    | parametro_form COMA parametro_form

 109  parametros_fun : PARE_AB l_parametros_form PARE_CIE
 110                 | PARE_AB PARE_CIE
 111                 | PARE_AB error PARE_CIE

 112  cabeceraFun : FUN ID

 113  retornoFun : DOS_PUNTOS tipo
 114             | DOS_PUNTOS error
 115             | error

 116  $$2 :

 117  d_fun : cabeceraFun parametros_fun retornoFun $$2 bloq_general_fun

 118  asignacion_const : ID ASIGNACION constante_num
 119                   | ID IGUAL constante_num
 120                   | ID ASIGNACION error

 121  l_const : asignacion_const
 122          | l_const COMA asignacion_const

 123  const : CONST l_const

 124  constante_num : DOBLE
 125                | ENTERO

 126  parametro_real : ID
 127                 | constante_num

 128  l_parametros_reales : PARE_AB parametro_real COMA parametro_real PARE_CIE
 129                      | PARE_AB parametro_real PARE_CIE
 130                      | PARE_AB PARE_CIE
 131                      | PARE_AB error PARE_CIE

 132  invocacion_fun : ID l_parametros_reales

 133  asignacion : ID ASIGNACION op_aritemtica_cast
 134             | ID IGUAL op_aritemtica_cast
 135             | ID ASIGNACION error

 136  return : RETURN op_aritemtica_cast
 137         | RETURN error

 138  cond_if : op_aritemtica_cast comp op_aritemtica_cast
 139          | error comp op_aritemtica_cast
 140          | op_aritemtica_cast error op_aritemtica_cast
 141          | op_aritemtica_cast comp error

 142  cond : PARE_AB cond_if PARE_CIE
 143       | error cond_if PARE_CIE
 144       | PARE_AB cond_if error
 145       | PARE_AB error PARE_CIE

 146  bloque_then_for_fun : bloq_ejecutable_for_fun
 147                      | sentencia_e_for_fun PUNTO_COMA

 148  bloque_else_for_fun : bloq_ejecutable_for_fun
 149                      | sentencia_e_for_fun PUNTO_COMA

 150  if_for_fun : IF cond THEN bloque_then_for_fun ELSE bloque_else_for_fun END_IF
 151             | IF cond THEN bloque_then_for_fun END_IF
 152             | IF cond THEN bloque_then_for_fun error bloque_else_for_fun END_IF
 153             | IF cond error bloque_then_for_fun ELSE bloque_else_for_fun END_IF
 154             | IF cond THEN bloque_then_for_fun ELSE bloque_else_for_fun error

 155  bloque_then_for : bloq_ejecutable_for
 156                  | sentencia_e_for PUNTO_COMA

 157  bloque_else_for : bloq_ejecutable_for
 158                  | sentencia_e_for PUNTO_COMA

 159  if_for : IF cond THEN bloque_then_for ELSE bloque_else_for END_IF
 160         | IF cond THEN bloque_then_for END_IF
 161         | IF cond THEN bloque_then_for error bloque_else_for END_IF
 162         | IF cond error bloque_then_for ELSE bloque_else_for END_IF
 163         | IF cond THEN bloque_then_for ELSE bloque_else_for error

 164  bloque_then_fun : bloq_ejecutable_fun
 165                  | sentencia_e_fun PUNTO_COMA

 166  bloque_else_fun : bloq_ejecutable_fun
 167                  | sentencia_e_fun PUNTO_COMA

 168  if_fun : IF cond THEN bloque_then_fun ELSE bloque_else_fun END_IF
 169         | IF cond THEN bloque_then_fun END_IF
 170         | IF cond THEN bloque_then_fun error bloque_else_fun END_IF
 171         | IF cond error bloque_then_fun ELSE bloque_else_fun END_IF
 172         | IF cond THEN bloque_then_fun ELSE bloque_else_fun error

 173  bloque_then : bloq_ejecutable
 174              | sentencia_e_gen PUNTO_COMA

 175  bloque_else : bloq_ejecutable
 176              | sentencia_e_gen PUNTO_COMA

 177  if : IF cond THEN bloque_then ELSE bloque_else END_IF
 178     | IF cond THEN bloque_then END_IF
 179     | IF cond THEN bloque_then error bloque_else END_IF
 180     | IF cond error bloque_then ELSE bloque_else END_IF
 181     | IF cond THEN bloque_then ELSE bloque_else error
 182     | IF cond error bloque_then END_IF

 183  cont_cadena : CADENA
 184              | ID

 185  out : OUT PARE_AB cont_cadena PARE_CIE
 186      | OUT PARE_AB error

 187  factor : ID
 188         | invocacion_fun
 189         | constante_num

 190  termino : factor
 191          | termino MULT factor
 192          | termino DIV factor

 193  e_aritmetica : termino
 194               | e_aritmetica SUM termino
 195               | e_aritmetica MENOS termino
 196               | MENOS termino

 197  op_aritemtica_cast : TOF64 PARE_AB e_aritmetica PARE_CIE
 198                     | e_aritmetica
 199                     | TOF64 error e_aritmetica PARE_CIE
 200                     | TOF64 PARE_AB e_aritmetica error

 201  tipo : UI8
 202       | F64

 203  comp : MAYOR
 204       | MENOR
 205       | IGUAL
 206       | MAYOR_IGUAL
 207       | MENOR_IGUAL
 208       | DISTINTO

 209  cond_for : ID comp op_aritemtica_cast
 210           | error comp op_aritemtica_cast
 211           | ID error op_aritemtica_cast
 212           | ID comp error

 213  signo : SUM
 214        | MENOS

 215  crecim_for : signo constante_num
 216             | constante_num
 217             | error constante_num
 218             | signo error

 219  asignacion_for : ID ASIGNACION op_aritemtica_cast
 220                 | ID IGUAL op_aritemtica_cast
 221                 | ID ASIGNACION error

 222  clausula_for : PARE_AB asignacion_for PUNTO_COMA cond_for PUNTO_COMA crecim_for PARE_CIE
 223               | PARE_AB asignacion_for error cond_for PUNTO_COMA crecim_for PARE_CIE
 224               | PARE_AB asignacion_for PUNTO_COMA cond_for error crecim_for PARE_CIE

 225  cuerpoFor : bloq_ejecutable_for
 226            | sentencia_e_for

 227  tag : ID DOS_PUNTOS

 228  for : FOR clausula_for cuerpoFor

 229  $$3 :

 230  for : tag $$3 FOR clausula_for cuerpoFor

 231  cuerpoForFun : bloq_ejecutable_for_fun
 232               | sentencia_e_for_fun

 233  for_fun : FOR clausula_for cuerpoForFun

 234  $$4 :

 235  for_fun : tag $$4 FOR clausula_for cuerpoForFun

 236  const_when : ID
 237             | constante_num
 238             | error

 239  cond_when : PARE_AB const_when comp const_when PARE_CIE
 240            | error const_when comp const_when PARE_CIE
 241            | PARE_AB const_when error const_when PARE_CIE
 242            | PARE_AB const_when comp const_when error
 243            | PARE_AB error PARE_CIE

 244  when : WHEN cond_when THEN bloq_general
 245       | WHEN cond_when error bloq_general

 246  when_fun : WHEN cond_when THEN bloq_general_fun
 247           | WHEN cond_when error bloq_general_fun

state 0
	$accept : . program $end  (0)

	ID  shift 1
	.  error

	program  goto 2


state 1
	program : ID . $$1 bloq_general  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 3


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : ID $$1 . bloq_general  (2)

	error  shift 4
	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	LLAVE_AB  shift 16
	.  error

	bloq_general  goto 17
	sentencia  goto 18
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	bloq_sentencias  goto 32
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 4
	bloq_general : error . bloq_sentencias LLAVE_CE  (73)

	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	.  error

	sentencia  goto 18
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	bloq_sentencias  goto 36
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 5
	if : IF . cond THEN bloque_then ELSE bloque_else END_IF  (177)
	if : IF . cond THEN bloque_then END_IF  (178)
	if : IF . cond THEN bloque_then error bloque_else END_IF  (179)
	if : IF . cond error bloque_then ELSE bloque_else END_IF  (180)
	if : IF . cond THEN bloque_then ELSE bloque_else error  (181)
	if : IF . cond error bloque_then END_IF  (182)

	error  shift 37
	PARE_AB  shift 38
	.  error

	cond  goto 39


state 6
	out : OUT . PARE_AB cont_cadena PARE_CIE  (185)
	out : OUT . PARE_AB error  (186)

	PARE_AB  shift 40
	.  error


state 7
	cabeceraFun : FUN . ID  (112)

	ID  shift 41
	.  error


state 8
	return : RETURN . op_aritemtica_cast  (136)
	return : RETURN . error  (137)

	error  shift 42
	ID  shift 43
	TOF64  shift 44
	MENOS  shift 45
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	op_aritemtica_cast  goto 50
	factor  goto 51
	termino  goto 52
	e_aritmetica  goto 53


state 9
	when : WHEN . cond_when THEN bloq_general  (244)
	when : WHEN . cond_when error bloq_general  (245)

	error  shift 54
	PARE_AB  shift 55
	.  error

	cond_when  goto 56


state 10
	sentencia_e : DEFER . asignacion  (12)
	sentencia_e : DEFER . out  (13)
	sentencia_e : DEFER . invocacion_fun  (14)
	sentencia_e_gen : DEFER . if  (18)
	sentencia_e_gen : DEFER . for  (19)

	IF  shift 5
	OUT  shift 6
	ID  shift 57
	FOR  shift 15
	.  error

	asignacion  goto 58
	out  goto 59
	invocacion_fun  goto 60
	if  goto 61
	for  goto 62
	tag  goto 35


state 11
	tipo : UI8 .  (201)

	.  reduce 201


state 12
	tipo : F64 .  (202)

	.  reduce 202


state 13
	d_var : ID . l_variables  (105)
	invocacion_fun : ID . l_parametros_reales  (132)
	asignacion : ID . ASIGNACION op_aritemtica_cast  (133)
	asignacion : ID . IGUAL op_aritemtica_cast  (134)
	asignacion : ID . ASIGNACION error  (135)
	tag : ID . DOS_PUNTOS  (227)

	error  shift 63
	ID  shift 64
	IGUAL  shift 65
	PARE_AB  shift 66
	DOS_PUNTOS  shift 67
	ASIGNACION  shift 68
	.  error

	l_variables  goto 69
	l_parametros_reales  goto 70


state 14
	const : CONST . l_const  (123)

	ID  shift 71
	.  error

	asignacion_const  goto 72
	l_const  goto 73


state 15
	for : FOR . clausula_for cuerpoFor  (228)

	PARE_AB  shift 74
	.  error

	clausula_for  goto 75


state 16
	bloq_general : LLAVE_AB . bloq_sentencias LLAVE_CE  (72)
	bloq_general : LLAVE_AB . bloq_sentencias error  (74)
	bloq_general : LLAVE_AB . LLAVE_CE  (76)

	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	LLAVE_CE  shift 76
	.  error

	sentencia  goto 18
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	bloq_sentencias  goto 77
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 17
	program : ID $$1 bloq_general .  (2)

	.  reduce 2


state 18
	bloq_sentencias : sentencia . PUNTO_COMA  (43)
	bloq_sentencias : sentencia . error  (44)

	error  shift 78
	PUNTO_COMA  shift 79
	.  error


state 19
	sentencia : sentencia_d .  (3)

	.  reduce 3


state 20
	sentencia : sentencia_e_gen .  (4)

	.  reduce 4


state 21
	sentencia : when .  (5)

	.  reduce 5


state 22
	sentencia_d : d_var .  (6)

	.  reduce 6


state 23
	sentencia_d : d_fun .  (7)

	.  reduce 7


state 24
	sentencia_d : const .  (8)

	.  reduce 8


state 25
	sentencia_e_gen : sentencia_e .  (15)

	.  reduce 15


state 26
	sentencia_e : asignacion .  (9)

	.  reduce 9


state 27
	sentencia_e : out .  (10)

	.  reduce 10


state 28
	sentencia_e : invocacion_fun .  (11)

	.  reduce 11


state 29
	sentencia_e_gen : if .  (16)

	.  reduce 16


state 30
	sentencia_e_gen : for .  (17)

	.  reduce 17


state 31
	sentencia_e_gen : return .  (20)

	.  reduce 20


state 32
	bloq_sentencias : bloq_sentencias . sentencia PUNTO_COMA  (45)
	bloq_sentencias : bloq_sentencias . sentencia error  (46)
	bloq_general : bloq_sentencias .  (75)

	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	$end  reduce 75
	error  reduce 75
	PUNTO_COMA  reduce 75

	sentencia  goto 80
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 33
	d_var : tipo . l_variables  (104)

	error  shift 63
	ID  shift 64
	.  error

	l_variables  goto 81


state 34
	d_fun : cabeceraFun . parametros_fun retornoFun $$2 bloq_general_fun  (117)

	PARE_AB  shift 82
	.  error

	parametros_fun  goto 83


state 35
	for : tag . $$3 FOR clausula_for cuerpoFor  (230)
	$$3 : .  (229)

	.  reduce 229

	$$3  goto 84


state 36
	bloq_sentencias : bloq_sentencias . sentencia PUNTO_COMA  (45)
	bloq_sentencias : bloq_sentencias . sentencia error  (46)
	bloq_general : error bloq_sentencias . LLAVE_CE  (73)

	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	LLAVE_CE  shift 85
	.  error

	sentencia  goto 80
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 37
	cond : error . cond_if PARE_CIE  (143)

	error  shift 86
	ID  shift 43
	TOF64  shift 44
	MENOS  shift 45
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	op_aritemtica_cast  goto 87
	cond_if  goto 88
	factor  goto 51
	termino  goto 52
	e_aritmetica  goto 53


state 38
	cond : PARE_AB . cond_if PARE_CIE  (142)
	cond : PARE_AB . cond_if error  (144)
	cond : PARE_AB . error PARE_CIE  (145)

	error  shift 89
	ID  shift 43
	TOF64  shift 44
	MENOS  shift 45
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	op_aritemtica_cast  goto 87
	cond_if  goto 90
	factor  goto 51
	termino  goto 52
	e_aritmetica  goto 53


state 39
	if : IF cond . THEN bloque_then ELSE bloque_else END_IF  (177)
	if : IF cond . THEN bloque_then END_IF  (178)
	if : IF cond . THEN bloque_then error bloque_else END_IF  (179)
	if : IF cond . error bloque_then ELSE bloque_else END_IF  (180)
	if : IF cond . THEN bloque_then ELSE bloque_else error  (181)
	if : IF cond . error bloque_then END_IF  (182)

	error  shift 91
	THEN  shift 92
	.  error


state 40
	out : OUT PARE_AB . cont_cadena PARE_CIE  (185)
	out : OUT PARE_AB . error  (186)

	error  shift 93
	ID  shift 94
	CADENA  shift 95
	.  error

	cont_cadena  goto 96


state 41
	cabeceraFun : FUN ID .  (112)

	.  reduce 112


state 42
	return : RETURN error .  (137)

	.  reduce 137


state 43
	invocacion_fun : ID . l_parametros_reales  (132)
	factor : ID .  (187)

	PARE_AB  shift 66
	error  reduce 187
	IF  reduce 187
	OUT  reduce 187
	RETURN  reduce 187
	DEFER  reduce 187
	ID  reduce 187
	FOR  reduce 187
	LLAVE_CE  reduce 187
	MENOR  reduce 187
	MAYOR  reduce 187
	IGUAL  reduce 187
	MENOR_IGUAL  reduce 187
	MAYOR_IGUAL  reduce 187
	MENOS  reduce 187
	SUM  reduce 187
	MULT  reduce 187
	DIV  reduce 187
	PARE_CIE  reduce 187
	PUNTO_COMA  reduce 187
	DISTINTO  reduce 187

	l_parametros_reales  goto 70


state 44
	op_aritemtica_cast : TOF64 . PARE_AB e_aritmetica PARE_CIE  (197)
	op_aritemtica_cast : TOF64 . error e_aritmetica PARE_CIE  (199)
	op_aritemtica_cast : TOF64 . PARE_AB e_aritmetica error  (200)

	error  shift 97
	PARE_AB  shift 98
	.  error


state 45
	e_aritmetica : MENOS . termino  (196)

	ID  shift 43
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	factor  goto 51
	termino  goto 99


state 46
	constante_num : DOBLE .  (124)

	.  reduce 124


state 47
	constante_num : ENTERO .  (125)

	.  reduce 125


state 48
	factor : invocacion_fun .  (188)

	.  reduce 188


state 49
	factor : constante_num .  (189)

	.  reduce 189


state 50
	return : RETURN op_aritemtica_cast .  (136)

	.  reduce 136


state 51
	termino : factor .  (190)

	.  reduce 190


state 52
	termino : termino . MULT factor  (191)
	termino : termino . DIV factor  (192)
	e_aritmetica : termino .  (193)

	MULT  shift 100
	DIV  shift 101
	error  reduce 193
	IF  reduce 193
	OUT  reduce 193
	RETURN  reduce 193
	DEFER  reduce 193
	ID  reduce 193
	FOR  reduce 193
	LLAVE_CE  reduce 193
	MENOR  reduce 193
	MAYOR  reduce 193
	IGUAL  reduce 193
	MENOR_IGUAL  reduce 193
	MAYOR_IGUAL  reduce 193
	MENOS  reduce 193
	SUM  reduce 193
	PARE_CIE  reduce 193
	PUNTO_COMA  reduce 193
	DISTINTO  reduce 193


state 53
	e_aritmetica : e_aritmetica . SUM termino  (194)
	e_aritmetica : e_aritmetica . MENOS termino  (195)
	op_aritemtica_cast : e_aritmetica .  (198)

	MENOS  shift 102
	SUM  shift 103
	error  reduce 198
	IF  reduce 198
	OUT  reduce 198
	RETURN  reduce 198
	DEFER  reduce 198
	ID  reduce 198
	FOR  reduce 198
	LLAVE_CE  reduce 198
	MENOR  reduce 198
	MAYOR  reduce 198
	IGUAL  reduce 198
	MENOR_IGUAL  reduce 198
	MAYOR_IGUAL  reduce 198
	PARE_CIE  reduce 198
	PUNTO_COMA  reduce 198
	DISTINTO  reduce 198


state 54
	cond_when : error . const_when comp const_when PARE_CIE  (240)

	error  shift 104
	ID  shift 105
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	constante_num  goto 106
	const_when  goto 107


state 55
	cond_when : PARE_AB . const_when comp const_when PARE_CIE  (239)
	cond_when : PARE_AB . const_when error const_when PARE_CIE  (241)
	cond_when : PARE_AB . const_when comp const_when error  (242)
	cond_when : PARE_AB . error PARE_CIE  (243)

	error  shift 108
	ID  shift 105
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	constante_num  goto 106
	const_when  goto 109


state 56
	when : WHEN cond_when . THEN bloq_general  (244)
	when : WHEN cond_when . error bloq_general  (245)

	error  shift 110
	THEN  shift 111
	.  error


state 57
	invocacion_fun : ID . l_parametros_reales  (132)
	asignacion : ID . ASIGNACION op_aritemtica_cast  (133)
	asignacion : ID . IGUAL op_aritemtica_cast  (134)
	asignacion : ID . ASIGNACION error  (135)
	tag : ID . DOS_PUNTOS  (227)

	IGUAL  shift 65
	PARE_AB  shift 66
	DOS_PUNTOS  shift 67
	ASIGNACION  shift 68
	.  error

	l_parametros_reales  goto 70


state 58
	sentencia_e : DEFER asignacion .  (12)

	.  reduce 12


state 59
	sentencia_e : DEFER out .  (13)

	.  reduce 13


state 60
	sentencia_e : DEFER invocacion_fun .  (14)

	.  reduce 14


state 61
	sentencia_e_gen : DEFER if .  (18)

	.  reduce 18


state 62
	sentencia_e_gen : DEFER for .  (19)

	.  reduce 19


state 63
	l_variables : error .  (102)

	.  reduce 102


state 64
	l_variables : ID .  (101)

	.  reduce 101


state 65
	asignacion : ID IGUAL . op_aritemtica_cast  (134)

	ID  shift 43
	TOF64  shift 44
	MENOS  shift 45
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	op_aritemtica_cast  goto 112
	factor  goto 51
	termino  goto 52
	e_aritmetica  goto 53


state 66
	l_parametros_reales : PARE_AB . parametro_real COMA parametro_real PARE_CIE  (128)
	l_parametros_reales : PARE_AB . parametro_real PARE_CIE  (129)
	l_parametros_reales : PARE_AB . PARE_CIE  (130)
	l_parametros_reales : PARE_AB . error PARE_CIE  (131)

	error  shift 113
	ID  shift 114
	PARE_CIE  shift 115
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	constante_num  goto 116
	parametro_real  goto 117


state 67
	tag : ID DOS_PUNTOS .  (227)

	.  reduce 227


state 68
	asignacion : ID ASIGNACION . op_aritemtica_cast  (133)
	asignacion : ID ASIGNACION . error  (135)

	error  shift 118
	ID  shift 43
	TOF64  shift 44
	MENOS  shift 45
	DOBLE  shift 46
	ENTERO  shift 47
	.  error

	invocacion_fun  goto 48
	constante_num  goto 49
	op_aritemtica_cast  goto 119
	factor  goto 51
	termino  goto 52
	e_aritmetica  goto 53


state 69
	l_variables : l_variables . COMA ID  (103)
	d_var : ID l_variables .  (105)

	COMA  shift 120
	error  reduce 105
	PUNTO_COMA  reduce 105


state 70
	invocacion_fun : ID l_parametros_reales .  (132)

	.  reduce 132


state 71
	asignacion_const : ID . ASIGNACION constante_num  (118)
	asignacion_const : ID . IGUAL constante_num  (119)
	asignacion_const : ID . ASIGNACION error  (120)

	IGUAL  shift 121
	ASIGNACION  shift 122
	.  error


state 72
	l_const : asignacion_const .  (121)

	.  reduce 121


state 73
	l_const : l_const . COMA asignacion_const  (122)
	const : CONST l_const .  (123)

	COMA  shift 123
	error  reduce 123
	PUNTO_COMA  reduce 123


state 74
	clausula_for : PARE_AB . asignacion_for PUNTO_COMA cond_for PUNTO_COMA crecim_for PARE_CIE  (222)
	clausula_for : PARE_AB . asignacion_for error cond_for PUNTO_COMA crecim_for PARE_CIE  (223)
	clausula_for : PARE_AB . asignacion_for PUNTO_COMA cond_for error crecim_for PARE_CIE  (224)

	ID  shift 124
	.  error

	asignacion_for  goto 125


state 75
	for : FOR clausula_for . cuerpoFor  (228)

	error  shift 126
	IF  shift 127
	OUT  shift 6
	BREAK  shift 128
	DEFER  shift 129
	ID  shift 57
	CONTINUE  shift 130
	FOR  shift 15
	LLAVE_AB  shift 131
	.  error

	sentencia_e  goto 132
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	for  goto 133
	sentencia_e_for  goto 134
	if_for  goto 135
	bloq_ejecutable_for  goto 136
	cuerpoFor  goto 137
	tag  goto 35


state 76
	bloq_general : LLAVE_AB LLAVE_CE .  (76)

	.  reduce 76


state 77
	bloq_sentencias : bloq_sentencias . sentencia PUNTO_COMA  (45)
	bloq_sentencias : bloq_sentencias . sentencia error  (46)
	bloq_general : LLAVE_AB bloq_sentencias . LLAVE_CE  (72)
	bloq_general : LLAVE_AB bloq_sentencias . error  (74)

	error  shift 138
	IF  shift 5
	OUT  shift 6
	FUN  shift 7
	RETURN  shift 8
	WHEN  shift 9
	DEFER  shift 10
	UI8  shift 11
	F64  shift 12
	ID  shift 13
	CONST  shift 14
	FOR  shift 15
	LLAVE_CE  shift 139
	.  error

	sentencia  goto 80
	sentencia_d  goto 19
	sentencia_e_gen  goto 20
	when  goto 21
	d_var  goto 22
	d_fun  goto 23
	const  goto 24
	sentencia_e  goto 25
	asignacion  goto 26
	out  goto 27
	invocacion_fun  goto 28
	if  goto 29
	for  goto 30
	return  goto 31
	tipo  goto 33
	cabeceraFun  goto 34
	tag  goto 35


state 78
	bloq_sentencias : sentencia error .  (44)

	.  reduce 44


state 79
	bloq_sentencias : sentencia PUNTO_COMA .  (43)

	.  reduce 43


state 80
	bloq_sentencias : bloq_sentencias sentencia . PUNTO_COMA  (45)
	bloq_sentencias : bloq_sentencias sentencia . error  (46)

	error  shift 140
	PUNTO_COMA  shift 141
	.  error


state 81
	l_variables : l_variables . COMA ID  (103)
	d_var : tipo l_variables .  (104)

	COMA  shift 120
	error  reduce 104
	PUNTO_COMA  reduce 104

